# segy_loader

./: .gitignore  pyproject.toml  readme.md  requirements.txt  setup.py
data/segy/: 2.segy  24.segy  42.segy
data/seis/: 42.seis
example/: ex1_create_seis_save_load.py  ex2_load_check_seis.py  ex2_load_segy.py  ex3_load_check_seis.py  path_loader.py
segy_loader/: __init__.py  viewers.py
segy_loader/data/: __init__.py  segyio_keys.py  seis_obj.cp310-win_amd64.pyd  seis_obj.cp311-win_amd64.pyd
segy_loader/io/: __init__.py  seg2load.py  segy.py  seis.cp310-win_amd64.pyd  seis.cp311-win_amd64.pyd
segy_loader/preprocessing/: __init__.py  scaling.py
segy_loader/visualization/: visualziation.py
segy_loader/widgets/: __init__.py  segy_byte.py  unit_convertor.py
segy_loader/windows/: __init__.py  segy_parser.py
