[tool.poetry]
name = "segy_loader"
version = "0.0.1"
description = "A package for loading SEGY files and converting to seis"
authors = ["Amir Mardan <mardan.amir.h@gmail.com>"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "3.11.6"
contourpy = "^1.3.1"
cycler = "^0.12.1"
dotenv = "^0.9.9"
fonttools = "^4.56.0"
h5py = "^3.13.0"
kiwisolver = "^1.4.8"
matplotlib = "^3.10.0"
numpy = "^2.2.3"
packaging = "^24.2"
pandas = "^2.2.3"
pillow = "^11.1.0"
pyparsing = "^3.2.1"
PySide6 = "^6.8.2.1"
PySide6_Addons = "^6.8.2.1"
PySide6_Essentials = "^6.8.2.1"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
pytz = "^2025.1"
segyio = "^1.9.13"
shiboken6 = "^6.8.2.1"
six = "^1.17.0"
tzdata = "^2025.1"

[tool.poetry.scripts]
segy_loader = "segy_loader.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

include = [
{ psth = "*.so", format = "glob" }
]
